--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }} | {{ page.title }}</title>
-  <meta name="description" content="Homepage of Xuezhe Ma">
-  <meta name="author" content="Xuezhe Ma">
+  <meta name="description" content="Homepage of Minyu Chen">
+  <meta name="author" content="Minyu Chen">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -99,8 +99,8 @@
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#bio" | prepend: site.baseurl }}>Bio</a></li>
           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#publications" | prepend: site.baseurl }}>Publications</a></li>
           <!-- <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#talks" | prepend: site.baseurl }}>Talks</a></li>
-          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#teaching" | prepend: site.baseurl }}>Teaching</a></li> -->
-          <li class="navbar-item"><a class="navbar-link" href={{ site.data.main_info.resume | prepend: site.baseurl }} target="_blank">CV</a></li>
+<!--           <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#teaching" | prepend: site.baseurl }}>Teaching</a></li> --> -->
+          <li class="navbar-item"><a class="navbar-link" href={{ "/index.html#resume" | prepend: site.baseurl }}>Experiences</a></li>
         </ul>
       </div>
     </nav>
